--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,30 +1,30 @@
-image: docker:25
+image: python:3.9
 
 services:
   - docker:dind
-
-variables:
-  DOCKER_DRIVER: overlay2
 
 stages:
   - test
   - build
 
+variables:
+  DOCKER_HOST: tcp://docker:2375/
+  DOCKER_TLS_CERTDIR: ""
+
 before_script:
-  - apk add --no-cache python3 py3-pip python3-dev build-base jpeg-dev zlib-dev libffi-dev openssl-dev
-  - python3 -m pip install --upgrade pip
   - pip install -r requirements.txt
 
 test:
   stage: test
   script:
-    - python3 manage.py test
+    - python manage.py test
 
 build:
   stage: build
   script:
-    - docker login -u "$DOCKER_USER" -p "$DOCKER_PASSWORD"
-    - docker build -t "$DOCKER_USER/sana3ti-backend" .
-    - docker push "$DOCKER_USER/sana3ti-backend"
+    - docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+    - docker build -t $DOCKER_USER/sana3ti-backend .
+    - docker push $DOCKER_USER/sana3ti-backend
   only:
     - main
+
