--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: python:3.9
+image: docker:24.0.2  # Has Docker CLI installed
 
 services:
   - docker:dind
@@ -7,17 +7,14 @@ stages:
   - test
   - build
 
-variables:
-  DOCKER_HOST: tcp://docker:2375/
-  DOCKER_TLS_CERTDIR: ""
-
 before_script:
+  - apk add --no-cache python3 py3-pip
   - pip install -r requirements.txt
 
 test:
   stage: test
   script:
-    - python manage.py test
+    - python3 manage.py test
 
 build:
   stage: build
@@ -27,4 +24,3 @@ build:
     - docker push $DOCKER_USER/sana3ti-backend
   only:
     - main
-
