--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,6 @@
-image: python:3.9
-
-services:
-  - postgres:latest
+stages:
+  - test
+  - build
 
 variables:
   POSTGRES_DB: testdb
@@ -9,20 +8,23 @@ variables:
   POSTGRES_PASSWORD: testpassword
   DATABASE_URL: "postgres://testuser:testpassword@postgres:5432/testdb"
 
-stages:
-  - test
-  - build
-
-before_script:
-  - pip install -r requirements.txt
-
 test:
   stage: test
+  image: python:3.9
+  services:
+    - postgres:latest
+  before_script:
+    - pip install -r requirements.txt
   script:
     - python manage.py test
 
 build:
   stage: build
+  image: docker:latest
+  services:
+    - docker:dind
+  variables:
+    DOCKER_HOST: tcp://docker:2375
   script:
     - docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
     - docker build -t $DOCKER_USER/sana3ti-backend .
